--- a/app/views/hands/hands/_form.html.erb
+++ b/app/views/hands/hands/_form.html.erb
@@ -1,1 +1,1 @@
-<p><textarea required class="form-control" rows="5" placeholder="Explain briefly whether you've been able to help successfully and if you expect this student to need more help soon." name="note"></textarea></p>
+<p><textarea required class="form-control" rows="5" placeholder="" name="note"></textarea></p>
