--- a/app/views/hands/hands/index.html.erb
+++ b/app/views/hands/hands/index.html.erb
@@ -1,49 +1,34 @@
 <% if not @my_hands.any? || @hands.any? || (Settings.hands_show_non_questions && @long_time_users.any?) %>
+
 <div class="message">
     <h5>No requests. Go and find<br> a student to talk to! ❤️</h5>
 </div>
+
 <% else %>
 
 <div class="list-group">
+    <!-- Assistance requests that were previously claimed by TA -->
+    <% @my_hands.each do |hand| %>
+    <%= link_to(hand_path(hand), class: 'list-group-item active') do %>
+    <%= render_hand hand: hand %>
+    <% end %>
+    <% end %>
 
-	<% if @my_hands.any? %>
-	<% @my_hands.each do |hand| %>
-	<%= link_to(hand_path(hand), class: 'list-group-item active') do %>
-	<%= render partial: "hand", object: hand %>
-	<% end %>
-	<% end %>
-	<% end %>
+    <!-- Assistance requests that are open to respond to -->
+    <% @hands.each do |hand| %>
+    <%= link_to(hand_path(hand), class: "list-group-item #{'bg-warning' if hand.helpline}") do %>
+    <%= render_hand hand: hand %>
+    <% end %>
+    <% end %>
 
-
-	<% @hands.each do |hand| %>
-	<%= link_to(hand_path(hand), class: "list-group-item #{'bg-warning' if hand.helpline}") do %>
-	<%= render partial: "hand", object: hand %>
-	<% end %>
-	<% end %>
-
-
-	<% if @long_time_users.any? && Settings.hands_show_non_questions %>
-	<% @long_time_users.each do |user| %>
-	<%= link_to(new_hand_path(user_id: user.id), class: 'list-group-item') do %>
-	<%= user.name %>
-	<% if (Schedule.many? || Schedule.first&.groups&.many?) && user.group %>
-	<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(user.group.name) %>"><%= user.group.name %></span>
-	<% elsif user.schedule %>
-	<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(user.schedule.name) %>"><%= user.schedule.name %></span>
-	<% end %>
-	<br>
-	<small>
-		<% if user.last_spoken_at.blank? %>
-		never asked anything before
-		<% else %>
-		<%= "last spoken " + time_ago_in_words(user.last_spoken_at) + " ago" unless user.last_spoken_at.blank? %>
-		<% end %>
-		<%= "@ " + user.last_known_location if not user.last_known_location.blank? %>
-	</small>
-	<% end %>
-	<% end %>
-	<% end %>
-
+    <!-- Nudges to talk to students who we haven't talked to for a while -->
+    <% if @long_time_users.any? && Settings.hands_show_non_questions %>
+    <% @long_time_users.each do |user| %>
+    <%= link_to(new_hand_path(user_id: user.id), class: 'list-group-item') do %>
+    <%= render_hand user: user %>
+    <% end %>
+    <% end %>
+    <% end %>
 </div>
 
 <% end %>
