--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -133,7 +133,7 @@ section
 
 @media only screen and (min-width: 1200px) // x-large
 {
-	body.page #content
+	body.page #content, #submit-content
 	{
 		margin-top: 3rem;
 		margin-bottom: 3rem;
