--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -1,13 +1,13 @@
 <% content_for :content do %>
 <ul class="nav page-tabs">
     <li class="nav-item">
-        <a class="nav-link <%= 'active' if action_name == 'index' %>"
+        <a class="nav-link <%= 'active' if action_name == 'index' || action_name == 'syllabus' %>"
             aria-current="page" href="/<%= params[:slug] %>">
             <%= bootstrap_icon 'clipboard-check' %> Inhoud
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link <%= 'active' if action_name == 'questions' %>"
+        <a class="nav-link <%= 'active' if action_name == 'questions' || action_name == 'questions_syllabus' %>"
             href="/q/<%= params[:slug] %>">
             <%= bootstrap_icon 'patch-question' %> Hulp
         </a>
@@ -17,8 +17,8 @@
         <a class="nav-link <%= 'active' if action_name == 'submit' %>"
             href="/s/<%= params[:slug] %>">
             <%= bootstrap_icon 'box-seam' %> Submit
-            <% if true|| @submit && @submit.submitted_at %>
-            <%#= bootstrap_icon 'patch-check-fill', swidth: '16', sheight: '16', style: 'margin-left: 1rem' %>
+            <% if @submit && @submit.submitted_at %>
+            <%= bootstrap_icon 'patch-check-fill', swidth: '16', sheight: '16', style: 'margin-left: 1rem' %>
             <% end %>
         </a>
     </li>
