--- a/app/assets/stylesheets/includes/courselinks.scss
+++ b/app/assets/stylesheets/includes/courselinks.scss
@@ -5,13 +5,13 @@
 
 	margin-left: 0;
 	margin-right: 0;
-	padding: 0.35rem 0.35rem;
+//    padding: 0.35rem 0.35rem;
 }
 
 #course-links a
 {
 	display: flex;
-	padding: 0.35rem;
+//	padding: 0.15rem;
 	border-radius: 0.25rem;
 	flex: 0 0 0;
 	flex-direction: column;
