--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,5 +1,5 @@
-<li class="nav-item dropdown d-flex align-items-center">
-    <a id="userMenuDropdown" href="#" class="nav-link dropdown-toggle rounded-pill" data-bs-toggle="dropdown" aria-expanded="false"><%= bootstrap_icon 'person-fill', size: '24x24', style: 'vertical-align:-4px;' %> <%= t('account.login_button') if !authenticated? %></a>
+<li class="dropdown d-none d-md-block">
+    <a id="userMenuDropdown" class="dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false"><div><%= bootstrap_icon 'person-fill', size: '24x24', style: 'vertical-align:-4px;' %><small><%= t('account.login_button') if !authenticated? %> Menu</small></div></a>
     <div class="dropdown-menu dropdown-menu-end" id="user-menu" aria-labelledby="userMenuDropdown">
         <%= render partial: 'menu_items' %>
     </div>
