--- a/app/assets/stylesheets/includes/grading.scss
+++ b/app/assets/stylesheets/includes/grading.scss
@@ -36,3 +36,23 @@ body.grading
 		border-color:#C2CACC;
 	}
 }
+
+//****************************************************************************
+
+#toolbar
+{
+	@extend .align-items-center;
+
+	padding: 0.5rem;
+	display: flex;
+	flex-direction: row;
+
+	.nav-link
+	{
+		padding-left:0.5rem;
+	}
+	.nav-link.active
+	{
+		font-weight: bold;
+	}
+}
