--- a/app/assets/stylesheets/includes/page.scss
+++ b/app/assets/stylesheets/includes/page.scss
@@ -1,15 +1,18 @@
-.page-tabs
+#page-tabs
 {
     display: flex;
+    position: sticky;
+    top: 0;
     padding: 0;
     margin-left: 0;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid adjust-color($background-color, $lightness: -10%);
+    background-color: $background-color;
 
     li
     {
         list-style: none;
         margin: 0;
-        border-right: 1px solid gray;
+        border-right: 1px solid adjust-color($background-color, $lightness: -10%);
     }
 
     li a
@@ -37,18 +40,18 @@
 {
     // on mobile, stretch tab bar
 
-    .page-tabs li
+    #page-tabs li
     {
         flex: 1;
     }
 
-    .page-tabs li a
+    #page-tabs li a
     {
         justify-content: center;
         width: 100%;
     }
 
-    .page-tabs li:last-child
+    #page-tabs li:last-child
     {
         border-right: none;
     }
@@ -58,102 +61,8 @@
 {
     // on desktop, make tab buttons a bit wider
 
-    .page-tabs li a
+    #page-tabs li a
     {
         padding: 0.5rem 2rem;
     }
-}
-
-#content.questions
-{
-    padding: 0 !important;
-
-    .card
-    {
-        border-radius: 0;
-        
-        .star
-        {
-            float: right;
-            
-            svg
-            {
-                display: block;
-            }
-        }
-        
-        h5
-        {
-            font-size: 1rem;
-        }
-        
-        h5:only-child
-        {
-            margin:0;
-        }
-        
-        .card-link
-        {
-            display: block;
-        }
-        
-        .toolbar
-        {
-            display: flex;
-            border-top: 1px solid #E4E2E0;
-            background-color: #E7E5E2;
-            a
-            {
-                padding: 0.5rem 1rem;
-            }
-        }
-    }
-
-    .answer-card
-    {
-        border-radius: 0;
-        border: 0;
-        border-top: 1px solid #E4E2E0;
-        background-color: #FAF8F5;
-    }
-
-    > .card + .card
-    {
-        margin-top: 1rem;
-    }
-
-    .disambiguation
-    {
-        margin-bottom: 1rem;
-        
-        .card
-        {
-            border-radius: 0;
-            text-align: center;
-            padding: 0.5rem;
-            font-size: smaller;
-            
-            svg
-            {
-                margin: 0 auto;
-                margin-bottom: 0.5rem;
-            }
-            
-            .btn
-            {
-                margin-top: 0.5rem;
-            }
-        }
-    }
-    
-    [data-trix-attribute="quote"], [data-trix-attribute="strike"], [data-trix-attribute="href"], [data-trix-action="attachFiles"], [data-trix-button-group="file-tools"], [data-trix-attribute="heading1"]
-    {
-        display: none;
-    }
-}
-
-.trix-content pre
-{
-    max-height: 250px;
-    overflow: scroll;
 }
