--- a/app/views/application/_hands_menu.html.erb
+++ b/app/views/application/_hands_menu.html.erb
@@ -1,13 +1,19 @@
 <% if Settings.hands_allow && current_user.valid_profile? %>
 
-<li class="nav-item dropdown">
-    <a href="#" id="ama-dd" class="nav-link dropdown-toggle rounded-pill" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
-        <%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %><%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %>
+<li class="dropdown d-none d-md-block">
+    <a href="#" id="ama-dd" class="nasv-link dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
+        <div><%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %><small><%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Assistentie</small></div>
     </a>
     <div class="dropdown-menu dropdown-menu-end" id="assistance" aria-labelledby="ama-dd">
         <%= render 'assistance' %>
     </div>
 </li>
+
+<a href="/assistance" class="d-md d-md-none">
+    <!-- <div> -->
+        <%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %> <small> <%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Assistentie</small>
+    <!-- </div> -->
+</a>
 
 <% if is_local_ip? && Settings.hands_location_bumper && current_user.student? && current_user.last_known_location.blank? %>
     <script>
