--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -23,7 +23,7 @@ summary
 
 #navbar
 {
-    background-image: linear-gradient(120deg, rgb(132,250,176) 0%, #8fd3f4 100%);
+    background-image: linear-gradient(180deg, #84fab0 20%, #8fd3f4 100%);
 }
 
 #sidebar
