--- a/app/assets/stylesheets/includes/sidebar.scss
+++ b/app/assets/stylesheets/includes/sidebar.scss
@@ -8,6 +8,30 @@
     padding-top:0;
 }
 
+#scheduleDropdown
+{
+    width: 100%;
+}
+
+.nav-head
+{
+    .dropdown-menu
+    {
+        max-width: 100%;
+        
+        form
+        {
+            overflow: hidden;
+            
+            button
+            {
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+}
+
 @media (max-width: 767.98px)
 {
     #sidebar
