--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'navbar' %>
 
-<div id="sidebar" data-turbo-permanent class="navbar-expand-md navbar-collapse collapse">
+<div id="sidebar" data-turbo-permanent class="navbar-expand-md navbar-collapse collapse navbarCollapsedContent">
     <%= render 'sidebar' %>
 </div>
 
