--- a/app/views/application/_hands_menu.html.erb
+++ b/app/views/application/_hands_menu.html.erb
@@ -9,11 +9,17 @@
     </div>
 </li>
 
+<% if Settings.hands_allow %>
 <a href="/assistance" class="d-md d-md-none">
-    <!-- <div> -->
-        <%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %> <small> <%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Assistentie</small>
-    <!-- </div> -->
+        <%= bootstrap_icon "question-circle", size: '24x24', style: 'vertical-align:-0.255em;' %> <small> Assistentie</small>
 </a>
+
+<% if current_user.staff? %>
+<a href="/hands" class="d-md d-md-none">
+        <%= bootstrap_icon "people", size: '24x24', style: 'vertical-align:-0.255em;' %> <small> <%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Hands</small>
+</a>
+<% end %>
+<% end %>
 
 <% if is_local_ip? && Settings.hands_location_bumper && current_user.student? && current_user.last_known_location.blank? %>
     <script>
