--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,7 +1,8 @@
 <div id="navbar" class="shadow-sm navbar navbar-expand-md flex-wrap column-gap-3">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbarCollapsedContent" aria-controls="navbar_links sidebar" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
         <span class="navbar-toggler-icon"></span>
     </button>
+    
     <%= render 'brand' %>
 
     <%# additional items as defined by the page template %>
