--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,5 +1,9 @@
+<ul class="navbar-nav button-bar d-grid d-md-none me-0">
+    <%= render 'course_links' %>
+    <%= render partial: 'hands_menu' %>
+    <%= render 'menu' %>
+</ul>
+    
+<hr class="d-block d-md-none my-2">
 
-<%# Main navigation%>
-
-    <%= render 'sidebar_content' %>
-
+<%= render 'sidebar_content' %>
