--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -10,7 +10,7 @@
     <li class="nav-item">
         <a class="nav-link <%= 'active' if action_name == 'questions' || action_name == 'questions_syllabus' %>"
             href="/q/<%= params[:slug] %>">
-            <%= bootstrap_icon 'patch-question' %> Hulp
+            <%= bootstrap_icon 'patch-question' %> Vragen
         </a>
     </li>
     <% end %>
